test/functional/failtests/lambdas/call.mismatchedInferredBase.txt
TypeError: Could not use lambda func where function is not expcted
3 | func main() {
4 |     foo((): 123);
  |         ^ (4:9)
5 | }

